welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: illegal start of simple expression
  if (negative):
               ^posNeg:8: error: ';' expected but 'else' found.
	}else{
         ^posNeg:16: error: Unmatched closing brace '}' ignored here
 }
 ^